# python_magnetrun

./: .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  start-venv.sh
data/: M9_2019.06.20-14_36_30.csv  M9_Default_200921-123303_Courants50Hz.tdms
debian/: changelog  control  copyright  watch
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: conf.py  index.rst
python_magnetrun/: GObject.py  HMagnet.py  MRecord.py  Magnet.py  MagnetRun.py  TODO  __init__.py  analysis.py  clawtest1.py  cli.py  cmp_fields.py  corr_Ih_Ib.py  datatools.py  deserialize.py  file_utils.py  file_utils.py~  heatexchanger_primary.py  magnetdata.py  magnetdata.py~  outliers.py  panel-mrecord-vs-time.py  python_magnetrun.py  test-requests.py  test_requests.py  txt2csv.py  viewcsv.py  water.py  wproperties.py
python_magnetrun/cooling/: clawtest1.py  heatexchanger_primary.py  water.py
python_magnetrun/examples/: get-record.py  proposal.py
python_magnetrun/panels/: panel-mrecord.py
python_magnetrun/processing/: breakingpoints.py  cli.py  correlations.py  filters.py  peaks.py  smoothers.py  stats.py
python_magnetrun/requests/: cli.py  connect.py  webscrapping.py
python_magnetrun/utils/: files.py  list.py  plateaux.py  plots.py  sequence.py  txt2csv.py
tests/: __init__.py  test-breakpoint-analysis.py  test-fft.py  test-fieldfactor.py  test-intercept.py  test-linerarreg.py  test-localminmax.py  test-lstsq.py  test-paramident.py  test-seaborn.py  test-simu.py  test-tin.py  test_python_magnetrun.py
